// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TenantsPage renders the tenants page: initial table state 1`] = `
<div>
  <main
    class="ant-layout-content pageContainer css-dev-only-do-not-override-mncuj7"
    id="tenants"
  >
    <div
      class="pageTitleContainer ant-flex css-dev-only-do-not-override-mncuj7 ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
      style="padding: 16px 24px;"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-mncuj7"
        data-testid="heading"
        style="font-weight: 600; font-size: 16px;"
      >
        Tenants
      </span>
      <button
        aria-describedby="test-id"
        class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-link ant-btn-color-link ant-btn-variant-link"
        style="font-weight: 500;"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="plus-square"
            class="anticon anticon-plus-square"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="plus-square"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
        </span>
        <span>
          Create Tenant
        </span>
      </button>
    </div>
    <div
      class="pageContent"
    >
      <div
        data-testid="litegraph-table-pagination-bar"
        style="display: flex; align-items: center; justify-content: space-between; gap: 12px; flex-wrap: wrap; margin-bottom: 12px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; column-gap: 8px; row-gap: 8px;"
        >
          <div
            class="ant-space-item"
          >
            <button
              aria-describedby="test-id"
              aria-label="Refresh table"
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only"
              data-testid="litegraph-table-refresh"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="reload"
                  class="anticon anticon-reload"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="reload"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
              data-testid="litegraph-table-total-records"
            >
              Total records: 
              <strong>
                2
              </strong>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
              data-testid="litegraph-table-total-pages"
            >
              Total pages: 
              <strong>
                1
              </strong>
            </span>
          </div>
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-mncuj7 ant-space-horizontal ant-space-align-center"
          style="flex-wrap: wrap; column-gap: 8px; row-gap: 8px; justify-content: flex-end;"
        >
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-first-page"
              disabled=""
              type="button"
            >
              <span>
                First
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-previous-page"
              disabled=""
              type="button"
            >
              <span>
                Previous
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              Page
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              class="ant-input-number css-dev-only-do-not-override-mncuj7 ant-input-number-outlined"
              style="width: 82px;"
            >
              <div
                class="ant-input-number-handler-wrap"
              >
                <span
                  aria-disabled="true"
                  aria-label="Increase Value"
                  class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="up"
                    class="anticon anticon-up ant-input-number-handler-up-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="up"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  aria-disabled="true"
                  aria-label="Decrease Value"
                  class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
                  role="button"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-input-number-handler-down-inner"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="ant-input-number-input-wrap"
              >
                <input
                  aria-label="Jump to page"
                  aria-valuemax="1"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  autocomplete="off"
                  class="ant-input-number-input"
                  data-testid="litegraph-table-page-jump"
                  role="spinbutton"
                  step="1"
                  value="1"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              of 
              1
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-next-page"
              disabled=""
              type="button"
            >
              <span>
                Next
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              data-testid="litegraph-table-last-page"
              disabled=""
              type="button"
            >
              <span>
                Last
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <div
              aria-label="Records per page"
              class="ant-select ant-select-outlined css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-show-arrow"
              data-testid="litegraph-table-page-size"
              style="width: 112px;"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-wrap"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Records per page"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      readonly=""
                      role="combobox"
                      style="opacity: 0;"
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="50"
                  >
                    50
                  </span>
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              per page
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-table-wrapper litegraph-table-no-horizontal-scroll css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table css-dev-only-do-not-override-mncuj7 ant-table-layout-fixed"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: fixed;"
                  >
                    <colgroup>
                      <col
                        style="width: 240px;"
                      />
                      <col
                        style="width: 220px;"
                      />
                      <col
                        style="width: 80px;"
                      />
                      <col
                        style="width: 150px;"
                      />
                      <col
                        style="width: 70px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                          scope="col"
                        >
                          <div
                            class="ant-table-filter-column"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              <span
                                aria-describedby="test-id"
                              >
                                GUID
                              </span>
                            </span>
                            <span
                              class="ant-dropdown-trigger ant-table-filter-trigger"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="filter"
                                class="anticon anticon-filter"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="filter"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          aria-label=""
                          class="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters react-resizable"
                          scope="col"
                          tabindex="0"
                          title=""
                        >
                          <div
                            class="ant-table-filter-column"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              <div
                                aria-describedby="test-id"
                                class="ant-table-column-sorters"
                              >
                                <span
                                  class="ant-table-column-title"
                                >
                                  <span
                                    aria-describedby="test-id"
                                  >
                                    Name
                                  </span>
                                </span>
                                <span
                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="ant-table-column-sorter-inner"
                                  >
                                    <span
                                      aria-label="caret-up"
                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-up"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      aria-label="caret-down"
                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-down"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </span>
                            <span
                              class="ant-dropdown-trigger ant-table-filter-trigger"
                              role="button"
                              tabindex="-1"
                            >
                              <span
                                aria-label="filter"
                                class="anticon anticon-filter"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="filter"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          aria-label=""
                          class="ant-table-cell ant-table-column-has-sorters react-resizable"
                          scope="col"
                          tabindex="0"
                        >
                          <div
                            aria-describedby="test-id"
                            class="ant-table-column-sorters"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              <span
                                aria-describedby="test-id"
                              >
                                Active
                              </span>
                            </span>
                            <span
                              class="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                aria-hidden="true"
                                class="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  class="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  class="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          aria-label=""
                          class="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters react-resizable"
                          scope="col"
                          tabindex="0"
                          title=""
                        >
                          <div
                            aria-describedby="test-id"
                            class="ant-table-column-sorters"
                          >
                            <span
                              class="ant-table-column-title"
                            >
                              <span
                                aria-describedby="test-id"
                              >
                                Created UTC
                              </span>
                            </span>
                            <span
                              class="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                aria-hidden="true"
                                class="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  class="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  class="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <span
                            class="react-resizable-handle"
                          />
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                        >
                          <span
                            aria-describedby="test-id"
                          >
                            Actions
                          </span>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0 litegraph-clickable-row"
                        data-row-key="00000000-0000-0000-0000-000000000000"
                        style="cursor: pointer;"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-ellipsis"
                        >
                          <span
                            style="display: inline-flex; align-items: center; gap: 4px; font-family: monospace; font-size: 12px; max-width: 100%; min-width: 0; width: 100%;"
                            title="00000000-0000-0000-0000-000000000000"
                          >
                            <span
                              style="display: block; flex: 1 1 auto; min-width: 0; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                            >
                              00000000-0000-0000-0000-000000000000
                            </span>
                            <button
                              aria-describedby="test-id"
                              aria-label="Copy GUID"
                              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                              style="padding: 0px 4px; min-width: auto; height: auto;"
                              type="button"
                            >
                              <span
                                class="ant-btn-icon"
                              >
                                <span
                                  aria-label="snippets"
                                  class="anticon anticon-snippets"
                                  role="img"
                                  style="font-size: 12px; color: rgb(191, 191, 191);"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="snippets"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M832 112H724V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H500V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H320c-17.7 0-32 14.3-32 32v120h-96c-17.7 0-32 14.3-32 32v632c0 17.7 14.3 32 32 32h512c17.7 0 32-14.3 32-32v-96h96c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM664 888H232V336h218v174c0 22.1 17.9 40 40 40h174v338zm0-402H514V336h.2L664 485.8v.2zm128 274h-56V456L544 264H360v-80h68v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h152v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h68v576z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </button>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell ant-table-cell-ellipsis"
                          title="Test Tenant"
                        >
                          <div>
                            Test Tenant
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            aria-label="check-circle"
                            class="anticon anticon-check-circle"
                            role="img"
                            style="color: green;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="check-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                              />
                            </svg>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell ant-table-cell-ellipsis"
                          title="31st Dec 2023, 16:00"
                        >
                          <div>
                            31st Dec 2023, 16:00
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <button
                            aria-describedby="test-id"
                            class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-dropdown-trigger"
                            role="tenant-action-menu"
                            style="font-size: 16px;"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                aria-label="more"
                                class="anticon anticon-more"
                                role="img"
                                style="font-size: 20px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0 litegraph-clickable-row"
                        data-row-key="00000000-0000-0000-0000-000000000002"
                        style="cursor: pointer;"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-ellipsis"
                        >
                          <span
                            style="display: inline-flex; align-items: center; gap: 4px; font-family: monospace; font-size: 12px; max-width: 100%; min-width: 0; width: 100%;"
                            title="00000000-0000-0000-0000-000000000002"
                          >
                            <span
                              style="display: block; flex: 1 1 auto; min-width: 0; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                            >
                              00000000-0000-0000-0000-000000000002
                            </span>
                            <button
                              aria-describedby="test-id"
                              aria-label="Copy GUID"
                              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                              style="padding: 0px 4px; min-width: auto; height: auto;"
                              type="button"
                            >
                              <span
                                class="ant-btn-icon"
                              >
                                <span
                                  aria-label="snippets"
                                  class="anticon anticon-snippets"
                                  role="img"
                                  style="font-size: 12px; color: rgb(191, 191, 191);"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="snippets"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M832 112H724V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H500V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H320c-17.7 0-32 14.3-32 32v120h-96c-17.7 0-32 14.3-32 32v632c0 17.7 14.3 32 32 32h512c17.7 0 32-14.3 32-32v-96h96c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM664 888H232V336h218v174c0 22.1 17.9 40 40 40h174v338zm0-402H514V336h.2L664 485.8v.2zm128 274h-56V456L544 264H360v-80h68v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h152v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h68v576z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </button>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell ant-table-cell-ellipsis"
                          title="Test Tenant 2"
                        >
                          <div>
                            Test Tenant 2
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <span
                            aria-label="check-circle"
                            class="anticon anticon-check-circle"
                            role="img"
                            style="color: green;"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="check-circle"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                              />
                            </svg>
                          </span>
                        </td>
                        <td
                          class="ant-table-cell ant-table-cell-ellipsis"
                          title="1st Jan 2024, 16:00"
                        >
                          <div>
                            1st Jan 2024, 16:00
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <button
                            aria-describedby="test-id"
                            class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-dropdown-trigger"
                            role="tenant-action-menu"
                            style="font-size: 16px;"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                aria-label="more"
                                class="anticon anticon-more"
                                role="img"
                                style="font-size: 20px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`TenantsPage should create a tenant and should be visible in the table: create tenant button 1`] = `
<button
  aria-describedby="test-id"
  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-link ant-btn-color-link ant-btn-variant-link"
  style="font-weight: 500;"
  type="button"
>
  <span
    class="ant-btn-icon"
  >
    <span
      aria-label="plus-square"
      class="anticon anticon-plus-square"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-square"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
        />
        <path
          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
        />
      </svg>
    </span>
  </span>
  <span>
    Create Tenant
  </span>
</button>
`;

exports[`TenantsPage should create a tenant and should be visible in the table: final table state 1`] = `
<div
  class="ant-table css-dev-only-do-not-override-mncuj7 ant-table-layout-fixed"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
    >
      <table
        style="table-layout: fixed;"
      >
        <colgroup>
          <col
            style="width: 240px;"
          />
          <col
            style="width: 220px;"
          />
          <col
            style="width: 80px;"
          />
          <col
            style="width: 150px;"
          />
          <col
            style="width: 70px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell ant-table-cell-ellipsis react-resizable"
              scope="col"
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  <span
                    aria-describedby="test-id"
                  >
                    GUID
                  </span>
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              aria-label=""
              class="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
              title=""
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  <div
                    aria-describedby="test-id"
                    class="ant-table-column-sorters"
                  >
                    <span
                      class="ant-table-column-title"
                    >
                      <span
                        aria-describedby="test-id"
                      >
                        Name
                      </span>
                    </span>
                    <span
                      class="ant-table-column-sorter ant-table-column-sorter-full"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-table-column-sorter-inner"
                      >
                        <span
                          aria-label="caret-up"
                          class="anticon anticon-caret-up ant-table-column-sorter-up"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                            />
                          </svg>
                        </span>
                        <span
                          aria-label="caret-down"
                          class="anticon anticon-caret-down ant-table-column-sorter-down"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="caret-down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              aria-label=""
              class="ant-table-cell ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
            >
              <div
                aria-describedby="test-id"
                class="ant-table-column-sorters"
              >
                <span
                  class="ant-table-column-title"
                >
                  <span
                    aria-describedby="test-id"
                  >
                    Active
                  </span>
                </span>
                <span
                  class="ant-table-column-sorter ant-table-column-sorter-full"
                >
                  <span
                    aria-hidden="true"
                    class="ant-table-column-sorter-inner"
                  >
                    <span
                      aria-label="caret-up"
                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                        />
                      </svg>
                    </span>
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              aria-label=""
              class="ant-table-cell ant-table-cell-ellipsis ant-table-column-has-sorters react-resizable"
              scope="col"
              tabindex="0"
              title=""
            >
              <div
                aria-describedby="test-id"
                class="ant-table-column-sorters"
              >
                <span
                  class="ant-table-column-title"
                >
                  <span
                    aria-describedby="test-id"
                  >
                    Created UTC
                  </span>
                </span>
                <span
                  class="ant-table-column-sorter ant-table-column-sorter-full"
                >
                  <span
                    aria-hidden="true"
                    class="ant-table-column-sorter-inner"
                  >
                    <span
                      aria-label="caret-up"
                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-up"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                        />
                      </svg>
                    </span>
                    <span
                      aria-label="caret-down"
                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="caret-down"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell"
              scope="col"
            >
              <span
                aria-describedby="test-id"
              >
                Actions
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            class="ant-table-row ant-table-row-level-0 litegraph-clickable-row"
            data-row-key="00000000-0000-0000-0000-000000000000"
            style="cursor: pointer;"
          >
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
            >
              <span
                style="display: inline-flex; align-items: center; gap: 4px; font-family: monospace; font-size: 12px; max-width: 100%; min-width: 0; width: 100%;"
                title="00000000-0000-0000-0000-000000000000"
              >
                <span
                  style="display: block; flex: 1 1 auto; min-width: 0; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                >
                  00000000-0000-0000-0000-000000000000
                </span>
                <button
                  aria-describedby="test-id"
                  aria-label="Copy GUID"
                  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  style="padding: 0px 4px; min-width: auto; height: auto;"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="snippets"
                      class="anticon anticon-snippets"
                      role="img"
                      style="font-size: 12px; color: rgb(191, 191, 191);"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="snippets"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832 112H724V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H500V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H320c-17.7 0-32 14.3-32 32v120h-96c-17.7 0-32 14.3-32 32v632c0 17.7 14.3 32 32 32h512c17.7 0 32-14.3 32-32v-96h96c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM664 888H232V336h218v174c0 22.1 17.9 40 40 40h174v338zm0-402H514V336h.2L664 485.8v.2zm128 274h-56V456L544 264H360v-80h68v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h152v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h68v576z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </span>
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="Test Tenant"
            >
              <div>
                Test Tenant
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="color: green;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="31st Dec 2023, 16:00"
            >
              <div>
                31st Dec 2023, 16:00
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                aria-describedby="test-id"
                class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-dropdown-trigger"
                role="tenant-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0 litegraph-clickable-row"
            data-row-key="00000000-0000-0000-0000-000000000002"
            style="cursor: pointer;"
          >
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
            >
              <span
                style="display: inline-flex; align-items: center; gap: 4px; font-family: monospace; font-size: 12px; max-width: 100%; min-width: 0; width: 100%;"
                title="00000000-0000-0000-0000-000000000002"
              >
                <span
                  style="display: block; flex: 1 1 auto; min-width: 0; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"
                >
                  00000000-0000-0000-0000-000000000002
                </span>
                <button
                  aria-describedby="test-id"
                  aria-label="Copy GUID"
                  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  style="padding: 0px 4px; min-width: auto; height: auto;"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="snippets"
                      class="anticon anticon-snippets"
                      role="img"
                      style="font-size: 12px; color: rgb(191, 191, 191);"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="snippets"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832 112H724V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H500V72c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v40H320c-17.7 0-32 14.3-32 32v120h-96c-17.7 0-32 14.3-32 32v632c0 17.7 14.3 32 32 32h512c17.7 0 32-14.3 32-32v-96h96c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zM664 888H232V336h218v174c0 22.1 17.9 40 40 40h174v338zm0-402H514V336h.2L664 485.8v.2zm128 274h-56V456L544 264H360v-80h68v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h152v32c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-32h68v576z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </span>
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="Test Tenant 2"
            >
              <div>
                Test Tenant 2
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="color: green;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="1st Jan 2024, 16:00"
            >
              <div>
                1st Jan 2024, 16:00
              </div>
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                aria-describedby="test-id"
                class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only ant-dropdown-trigger"
                role="tenant-action-menu"
                style="font-size: 16px;"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="more"
                    class="anticon anticon-more"
                    role="img"
                    style="font-size: 20px;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="more"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`TenantsPage should delete tenant successfully: delete confirmation modal 1`] = `
<div
  class="ant-modal-root css-dev-only-do-not-override-mncuj7"
  data-testid="delete-tenant-modal"
>
  <div
    class="ant-modal-mask"
  />
  <div
    class="ant-modal-wrap ant-modal-centered"
    tabindex="-1"
  >
    <div
      aria-labelledby="test-id"
      aria-modal="true"
      class="ant-modal css-dev-only-do-not-override-mncuj7 ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
      role="dialog"
      style="width: 520px;"
    >
      <div
        style="outline: none;"
        tabindex="0"
      >
        <div
          class="ant-modal-content"
        >
          <button
            aria-label="Close"
            class="ant-modal-close"
            type="button"
          >
            <span
              aria-label="Close"
              class="ant-modal-close-x"
            >
              <span
                aria-label="close"
                class="anticon anticon-close ant-modal-close-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="close"
                  fill="currentColor"
                  fill-rule="evenodd"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <div
            class="ant-modal-header"
          >
            <div
              class="ant-modal-title"
              id="test-id"
            >
              Delete Tenant
            </div>
          </div>
          <div
            class="ant-modal-body"
          >
            <div
              class="ant-typography css-dev-only-do-not-override-mncuj7"
            >
              Are you sure you want to delete this tenant?
            </div>
          </div>
          <div
            class="ant-modal-footer"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-primary ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-solid"
              type="button"
            >
              <span>
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`TenantsPage should delete tenant successfully: final table state after deletion 1`] = `null`;

exports[`TenantsPage should display Create Tenant button 1`] = `
<button
  aria-describedby="test-id"
  class="ant-btn css-dev-only-do-not-override-mncuj7 ant-btn-link ant-btn-color-link ant-btn-variant-link"
  style="font-weight: 500;"
  type="button"
>
  <span
    class="ant-btn-icon"
  >
    <span
      aria-label="plus-square"
      class="anticon anticon-plus-square"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus-square"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
        />
        <path
          d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
        />
      </svg>
    </span>
  </span>
  <span>
    Create Tenant
  </span>
</button>
`;

exports[`TenantsPage should update tenant successfully: final table state after update 1`] = `null`;
